test/classes/deitz/inherit/test_inherit_error1.good
test_inherit_error1.chpl:1: error: Class hierarchy is cyclic
